--- a/Flask/templates/csv.html
+++ b/Flask/templates/csv.html
@@ -1,4 +1,7 @@
-{%extends 'layout.html' %}
+{%extends "layout.html"%}
 {%block cuerpo%}
-<p>Hello</p>
+<form method="POST" enctype="multipart/form-data" action = '{{url_for("upload_file")}}'> <!--url_for y el nombre de la funcion-->
+    <input type="file" name="file">
+    <input type="submit" value="Upload">
+</form>
 {%endblock%}
