--- a/Flask/templates/layout.html
+++ b/Flask/templates/layout.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <img src="static/loog-grupo-spri (1).png" width="100px" height="70px">
+                    <img src="static/loog-grupo-spri.png" width="300px" height="100px">
                 </a>
             </div>
             <div class="col-lg-9">
