--- a/Flask/templates/layout.html
+++ b/Flask/templates/layout.html
@@ -55,8 +55,8 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Practice</a>
+                            <a href="{{url_for('importarcsv')}}" class="nav-item nav-link">Crear las predicciones</a>
+                            <a href="{{url_for('seleccionmodelo')}}" class="nav-item nav-link">Selecciona los modelos guardados</a>
                             <a href="team.html" class="nav-item nav-link">Attorneys</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
