aplicacion inicio sesion y registro

--- a/Flask/templates/layout.html
+++ b/Flask/templates/layout.html
@@ -22,7 +22,7 @@
         <div class="overlay text-white text-center">
             <h1 class="display-2 font-weight-bold my-3">Hola</h1>
             <h2 class="display-4 mb-5">Accede a nuestra página web</h2>
-            <a class="btn btn-lg btn-primary" href= "{{url_for('formulario')}}" >Empezar</a>
+            <a class="btn btn-lg btn-primary" href= "{{url_for('iniciosesion')}}" >Empezar</a>
         </div>
     {%endblock%}
 </content>
