--- a/Flask/templates/home.html
+++ b/Flask/templates/home.html
@@ -1,5 +1,5 @@
 {%extends 'layout.html' %}
 {%block cuerpo%}
 <h2><strong>{{mens}}</strong></h2><br>
-<p>Hello</p>
+<p>Bienvenido,{{nombre}} {{usuario}}</p>
 {%endblock%}
