aplicacion de flask

--- a/Flask/templates/contraseñayusuario.html
+++ b/Flask/templates/contraseñayusuario.html
@@ -3,8 +3,10 @@
 
 <table id="tabla">
     <thead>
-        <th>id</th>
-        <th>edad</th>
+        <th>nombre</th>
+        <th>apellido</th>
+        <th>correo</th>
+        <th>usuario</th>
         <th>contraseña</th>
     </thead>
     {%for val in registro%}
