--- a/Flask/templates/home.html
+++ b/Flask/templates/home.html
@@ -1,5 +1,5 @@
-{%extends 'layout.html' %}
+{%extends "layout2.html" %}
 {%block cuerpo%}
-<h2><strong>{{mens}}</strong></h2><br>
-<p>Bienvenido,{{nombre}} {{usuario}}</p>
+<h2><strong></strong></h2><br>
+<p>Bienvenido,{{usuario}}</p>
 {%endblock%}
