--- a/Flask/templates/inicio.html
+++ b/Flask/templates/inicio.html
@@ -16,6 +16,7 @@
                     <input type="submit" value="Entrar" class="btn btn-lg btn-primary" >
                 </form><br>
                 <a href="{{url_for('registro')}}">Registrarse</a>
+                <a href="{{url_for('consultar')}}">Contraseñas</a>
             
         </div>
     </div>         
