aplicacion de flask

--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -9843,7 +9843,7 @@ h6 {
 
 /*# sourceMappingURL=style.css.map */
 
-.selctvisualizar {
+.selctvisualizar2 {
   position: relative;
   display: flex;
   flex-wrap: wrap;
