--- a/Flask/templates/explicacionad.html
+++ b/Flask/templates/explicacionad.html
@@ -1,4 +1,8 @@
 {%extends "layout2.html"%}
 {%block cuerpo%}
 <h1>Modelo de adquisición</h1>
+<p>Explicar el modelo</p>
+<form action="{{url_for('explvalidacion')}}" method="POST">
+<input type="submit" formaction="{{url_for('seleccionmetodoad')}}">
+</form>
 {%endblock%}
