--- a/Flask/templates/manualval.html
+++ b/Flask/templates/manualval.html
@@ -1,5 +1,4 @@
 {%extends "layout2.html"%}
 {%block cuerpo%}
-<h1>Resultados valoración</h1>
-
+<h1>Ingresa los siguientes datos:</h1>
 {%endblock%}
