--- a/Flask/templates/layout2.html
+++ b/Flask/templates/layout2.html
@@ -54,7 +54,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="{{url_for('prueba')}}" class="nav-item nav-link active">Home</a>
                             <a href="{{url_for('explvalidacion')}}" class="nav-item nav-link">Modelo de validación</a>
                             <a href="{{url_for('expladquisicion')}}" class="nav-item nav-link">Modelo de adquisición</a>
                             <a href="{{url_for('selecvisualizar')}}" class="nav-item nav-link">Visualizar los resultados</a>
