--- a/Flask/templates/explicacionval.html
+++ b/Flask/templates/explicacionval.html
@@ -3,6 +3,6 @@
 <h1>El modelo de validación</h1>
 <p>Explicar el modelo</p>
 <form action="{{url_for('explvalidacion')}}" method="POST">
-<input type="submit" formaction="{{url_for('seleccionmetodoval')}}" value="empezar">
+    <input type="submit" value="empezar">
 </form>
 {%endblock%}
