--- a/Flask/templates/manualad.html
+++ b/Flask/templates/manualad.html
@@ -1,4 +1,24 @@
 {%extends "layout2.html"%}
 {%block cuerpo%}
 <h1>Ingresa los siguientes datos:</h1>
+<input type="number" placeholder="Anos en Mercado">
+<input type="number" placeholder="Cash flow mil EUR_2021">
+<input type="number" placeholder="EBITDA mil EUR_2021">
+<input type="number" placeholder="Inmovilizado mil EUR_2021">
+<input type="number" placeholder="Fondos propios mil EUR_2021">
+<input type="number" placeholder="Valor agregado mil EUR_2021">
+<input type="number" placeholder="Total pasivo_ratio">
+<input type="number" placeholder="Inmovilizado mil EUR_ratio">
+<input type="number" placeholder="Capital suscrito mil EUR_2021">
+<input type="number" placeholder="Capital social mil EUR">
+<input type="number" placeholder="Gastos financieros mil EUR_ratio">
+<input type="number" placeholder="Gastos de personal mil EUR_2021">
+<input type="number" placeholder="Resultado financiero mil EUR_ratio">
+<input type="number" placeholder="Total pasivo y capital propio mil EUR_2021">
+<input type="number" placeholder="Total activo mil EUR_2021">
+<input type="number" placeholder="Gastos financieros mil EUR_2021">
+<input type="number" placeholder="Pasivo fijo mil EUR_2021">
+<input type="number" placeholder="total_funding">
+<input type="submit" value="Enviar">
+
 {%endblock%}
