--- a/Flask/templates/seleccionmetodoval.html
+++ b/Flask/templates/seleccionmetodoval.html
@@ -1,6 +1,6 @@
 {%extends "layout2.html" %}
 {%block cuerpo%}
-<form action="{{url_for('seleccionval')}}" method="POST">
+<form action="{{url_for('seleccionmetodoval')}}" method="POST">
     <p>Selecciona el método para la validación: </p> <br>
     <select name="metodo">
         <option></option>
