--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -9852,3 +9852,9 @@ h6 {
   justify-content: center;
   
 }
+.options{
+  column-count: 3;
+  column-gap: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
