--- a/Flask/templates/manualval.html
+++ b/Flask/templates/manualval.html
@@ -1,26 +1,18 @@
 {%extends "layout2.html"%}
 {%block cuerpo%}
+<form action="{{url_for('manualval')}}" method="POST">
 <h1>Ingresa los siguientes datos:</h1>
-<input type="number" placeholder="Precio/Venta">
-<input type="number" placeholder="Activo circulante mil EUR_2021">
-<input type="number" placeholder="Fondos propios mil EUR_2021">
-<input type="number" placeholder="Total activo mil EUR_2021">
-<input type="number" placeholder="Total pasivo y capital propio mil EUR_2021">
-<input type="number" placeholder="Fondo de maniobra mil EUR_2021">
-<input type="number" placeholder="Deudores mil EUR_2021">
-<input type="number" placeholder="Beneficio neto mil EUR">
-<input type="number" placeholder="Ingresos de explotacion mil EUR_2021">
-<input type="number" placeholder="Importe neto Cifra de Ventas mil EUR_2021">
-<input type="number" placeholder="Pasivo liquido mil EUR_2021">
-<input type="number" placeholder="Total pasivo_2021">
-<input type="number" placeholder="total_funding">
-<input type="number" placeholder="Pasivo fijo mil EUR_2021">
-<input type="number" placeholder="Gastos financieros mil EUR_2021">
-<input type="number" placeholder="Resultado Explotacion mil EUR_2021">
-<input type="number" placeholder="EBIT mil EUR_2021">
-<input type="number" placeholder="PER">
-<input type="number" placeholder="Resultado del Ejercicio mil EUR_2021">
-<input type="number" placeholder="Result. ordinarios antes Impuestos mil EUR_2021">
-<input type="number" placeholder="Importe neto Cifra de Ventas mil EUR_ratio">
-<input type="submit" value="Enviar">
+<form action="{{url_for('manualval')}}" method="POST">
+    <div class="overlay text-white text-center" >
+        <div class="options">
+    {% for colum in columnas %}
+
+    <input type="number" name="{{ colum }}" placeholder="{{ colum }}" required><br>
+<br>
+    {% endfor %}
+</div>
+    <input type="submit" value="Enviar">
+</div>
+  </form>
+
 {%endblock%}
