--- a/Flask/templates/home.html
+++ b/Flask/templates/home.html
@@ -1,5 +1,23 @@
 {%extends "layout2.html" %}
 {%block cuerpo%}
-<h2><strong></strong></h2><br>
-<p>Bienvenido,{{usuario}}</p>
+
+
+<header>
+    <div class="col-md-g text-white text-center"> 
+        <br>
+        <h2><strong>Bienvenido, {{usuario}}</strong></h2><br>
+
+        <div>
+            <h6>Mediante los modelos disponibles en esta página podrá realizar predicciones de valoración o adquisición</h6>
+            <h6>de una de las empresas previamente establecidas o de su propia empresa</h6>
+            <br>
+            <h6>Estas predicciones son para el año 2022</h6>
+        </div>
+
+        <img src="https://smediabusiness.com/wp-content/uploads/2021/12/Principales-tendencias-y-predicciones-de-marketing-digital-para-el-2022.gif" alt="Ejemplo de gif" width="200" height="200">
+    </div>    
+        
+</header>
+
 {%endblock%}
+
