--- a/Flask/templates/explicacionad.html
+++ b/Flask/templates/explicacionad.html
@@ -7,7 +7,7 @@
     <li>Adquirida parcialmente</li>
     <li>Seguirá su curso sin accionistas (no será adquirida)</li>
   </ul>
-<form action="{{url_for('explvalidacion')}}" method="POST">
-<input type="submit" formaction="{{url_for('seleccionmetodoad')}}">
+  <form action="{{url_for('expladquisicion')}}" method="POST">
+    <input type="submit" value="empezar">
 </form>
 {%endblock%}
