--- a/Flask/templates/seleccionmetodoad.html
+++ b/Flask/templates/seleccionmetodoad.html
@@ -1,6 +1,6 @@
 {%extends "layout2.html" %}
 {%block cuerpo%}
-<form action="{{url_for('seleccionad')}}" method="POST">
+<form action="{{url_for('seleccionmetodoad')}}" method="POST">
     <p>Selecciona el método para la adquisición: </p> <br>
     <select name="metodo">
         <option></option>
@@ -9,4 +9,4 @@
     </select><br>
     <input type="submit" value="Seleccionar">
 </form>
-{%endblock%}
+{%endblock%} 
