aplicacion de Flask

--- a/Flask/templates/empresaval.html
+++ b/Flask/templates/empresaval.html
@@ -3,7 +3,7 @@
 {%block cuerpo%} 
 
 
-<form action="{{url_for('resultempresaval')}}" method="POST">
+<form action="{{url_for('empresaval')}}" method="POST">
 
     <label for = "b2" >Seleccionar si la empresa es b2b o b2c:</label>
     <select name="b2" class="form-control form-control-lg custom-form-control">
