--- a/Flask/templates/resultempresad.html
+++ b/Flask/templates/resultempresad.html
@@ -14,14 +14,14 @@
     <br>
     <h3><strong> Las empresas que cumplen los requisitos son:</strong></h3><br>
 
-        <table id = table style=  "margin: 0 auto" "text-align: center;" border = 1px width = 70% >
+        <table id = table style=  "margin: 0 auto; text-align: center;" border = 1px width = 70% >
             <tr>
                 <th>B2B or B2C</th>
                 <th>Startup</th>
             </tr>
             <tr >
-                <td >{{b2b_b2c}}</td>
-                <td >{{startup}}</td>
+                <td >{{b2b_b2cad}}</td>
+                <td >{{startupad}}</td>
             </tr>
 
         </table><br>
