--- a/Flask/templates/adquirido.html
+++ b/Flask/templates/adquirido.html
@@ -4,4 +4,5 @@
  <p>Tu empresa, según la prediccion esta: {{situacion}}</p><br>
  <img src="static/{{url}}">
 </div>
+<a href="{{url_for('resultadosad')}}">Visualizar resultados</a>
 {%endblock%}
