--- a/Flask/templates/predicciones.html
+++ b/Flask/templates/predicciones.html
@@ -3,4 +3,5 @@
 <div class="btn btn-lg ">
  <p>La prediccion para tu empresa de {{tipo}} es: {{prediccion}}</p>
 </div>
+<a href="{{url_for('resultadosval')}}">Visualizar resultados</a>
 {%endblock%}
