--- a/Flask/templates/empresad.html
+++ b/Flask/templates/empresad.html
@@ -1,25 +1,27 @@
 {%extends "layout2.html"%}
-{%block cuerpo%}
-<h1>Elige la empresa</h1>
+
+{%block cuerpo%} 
+
 
 <form action="{{url_for('empresad')}}" method="POST">
 
-    <label for = "b2ad" >Seleccionar si la empresa es b2b o b2c:</label>
-    
-    <select name="b2ad" class="form-control form-control-lg custom-form-control">
-    {% for b2ad in b2b_b2cad %}
-    <option value="{{b2ad}}" class="form-control form-control-lg custom-form-control">{{ b2ad }}</option>
+    <label for = "b2" >Seleccionar si la empresa es b2b o b2c:</label>
+    <select name="b2" class="form-control form-control-lg custom-form-control">
+    {% for b2 in b2b_b2c %}
+    <option value="{{ b2 }}" class="form-control form-control-lg custom-form-control">{{ b2 }}</option>
     {% endfor %}
-</select><br>
+    </select><br>
 
-    <label for = "startad" >Seleccionar si la empresa es una startup(1) o no(0):</label>
-    <select name = "startad" class="form-control form-control-lg custom-form-control">
-    {% for startad in startupad %}
-    <option value = "{{startad}}" class="form-control form-control-lg custom-form-control">{{ startad }}</option>
+    <label for = "start" >Seleccionar si la empresa es una startup(1) o no(0):</label>
+    <select name = "start" class="form-control form-control-lg custom-form-control">
+    {% for start in startup %}
+    <option value = "{{ start }}" class="form-control form-control-lg custom-form-control">{{ start }}</option>
     {% endfor %}
     </select><br>
 
     <button type="submit" value="Filtrar" class="btn btn-lg btn-primary" >Filtrar</button>
 
 </form>
-{%endblock%}
+
+        
+{%endblock%} 
