--- a/Flask/templates/explicacionval.html
+++ b/Flask/templates/explicacionval.html
@@ -2,7 +2,7 @@
 {%block cuerpo%}
 
 <div style="text-align: center;">
-    <h1>El modelo de validación</h1>
+    <h1>El modelo de valoración</h1>
     <p>Crear una regla predictora de la valoración de las empresas en el año
         2022.
     </p>
