--- a/Flask/templates/layout2.html
+++ b/Flask/templates/layout2.html
@@ -40,11 +40,11 @@
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
-                            <small>Aitor Fernandez de Retana Zuñiga</small>
+                            <small>Aitor Fernandez</small>
                         </div>
                     </div>
                     <div class="col-lg-5 text-right">
-                        <img src="static/logo_mu.png" width="100px" height="50px">
+                        <img src="static/logo_mu.png" width="67px" height="50px">
                     </div>
                 </div>
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
