--- a/Flask/templates/manualad.html
+++ b/Flask/templates/manualad.html
@@ -2,7 +2,8 @@
 {% extends "layout2.html" %}
   
 {% block cuerpo %}
-  <form action="{{ url_for('manualad') }}" method="POST">
+<br>
+  <form action="{{ url_for('manualad') }}" method="POST" class = "my-form-class">
       <h1>Ingresa los siguientes datos:</h1>
       <div class="overlay text-white text-center">
           <div class="options">
