--- a/Flask/templates/manualval.html
+++ b/Flask/templates/manualval.html
@@ -1,7 +1,9 @@
 {%extends "layout2.html"%}
 {%block cuerpo%}
-<form action="{{url_for('manualval')}}" method="POST">
+
+<form action="{{url_for('manualval')}}" method="POST" class="my-form-class">
 <h1>Ingresa los siguientes datos:</h1>
+
 <form action="{{url_for('manualval')}}" method="POST">
     <div class="overlay text-white text-center" >
         <div class="options">
